# libalpm_class

./: CMakeLists.txt  README.md
include/: alpm_db_class.hpp  alpm_depend_class.hpp  alpm_pkg_class.hpp  alpm_pkg_ver.hpp  libalpm_class.hpp
src/: CMakeLists.txt  alpm_db_class.cpp  alpm_depend_class.cpp  alpm_pkg_class.cpp  alpm_pkg_ver.cpp  libalpm_class.cpp
test/: main.cpp
